
2007-06-21  Lynn Garren

	* HepMC/GenEvent.h: add methods to set and access the number of 
	  multi particle interactions in the event.  
	  The default value of this number is -1.

2007-06-19  Lynn Garren

	* HepMC/GenParticle.h: use uint64_t for the serial number counter

  --------------------------  HepMC-2.01.00  --------------------------

2007-06-08  Lynn Garren

	* HepMC/GenEvent.h, src/GenEvent.cc: add clear() method

	* HepMC/GenParticleComparison.h:
	  define a GenParticle comparator
	* HepMC/GenParticle.h, src/GenParticle.cc:
	  set a serial number to be used by GenParticleComparison
	* HepMC/Flow.h, HepMC/GenVertex.h, src/Flow.cc, src/GenVertex.cc:
	  use std::set<GenParticle*,GenParticleComparison>
	* test: automatic comparison of output files is now possible

  --------------------------  HepMC-2.00.04  --------------------------

2007-06-01  Lynn Garren

	* HepMC/GenEvent.h, src/GenEvent.cc: change interface such that 
	  GenEvent makes its own copy of HeavyIon and PdfInfo


2007-05-29  Lynn Garren

	* src/GenVertex.cc: initialize range in default constructor
	* src/IO_Ascii*.cc: make sure every object is properly deleted
	* test/testHepMCIteration.cc: add iterator test

  --------------------------  HepMC-2.00.03  --------------------------

2007-04-23  Lynn Garren

	* bootstrap, configure.in, doc/Makefile.am:
	  To avoid problems with different versions of latex, just build
	  the documents during the bootstrap step.  
	* doc/buildDoc.sh: builds the documents if doxygen and latex are present

2007-04-20  Lynn Garren

        * HepMC/include/PythiaWrapper*.h:
          inline the method definitions to avoid conflicts
	* examples/initPythia.cc: put pythia intialization in a separate
	  file so we can test PythiaWrapper

  --------------------------  HepMC-2.00.02  --------------------------

2007-02-12 Lynn Garren

	* test/testHepMC.sh.in: works on Windows (Cygwin), MacOSX, and Linux

2007-02-07 Lynn Garren
