@@ -1,6 +1,6 @@
 
 HepMC::IO_ExtendedAscii-START_EVENT_LISTING
-E 34 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 438 0 0
+E 34 -1 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 438 0 0
 F 11 12 3.4000000000000004e+00 4.4199999999999999e+00 4.0800000000000003e-01 1.1000000000000000e-01 3.4000000000000002e-01
 V -1 0 0 0 0 0 1 2 0
 P 1 2212 0 0 6.9999999371178146e+03 7.0000000000000000e+03 9.3826999914648146e-01 3 0 0 -1 0
@@ -1750,7 +1750,7 @@ P 1308 22 -3.0874827470431101e-02 -1.7187772199176200e-02 -1.5744348823711479e-0
 V -438 0 1.3163208678664733e+02 2.6440649826669492e+01 -7.4015759095627106e+02 7.5297646639959964e+02 0 2 0
 P 1309 211 5.4244991970837397e-01 -4.4307069488711305e-02 -3.4788454269796802e+00 3.5239268325996402e+00 1.3957000000000086e-01 1 0 0 0 0
 P 1310 -211 1.4201531355762675e+00 4.3839105684496571e-01 -7.5570591189125258e+00 7.7030931422934064e+00 1.3956999999997841e-01 1 0 0 0 0
-E 79 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 209 0 0
+E 79 -1 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 209 0 0
 F 11 12 7.9000000000000004e+00 1.0270000000000000e+01 9.4800000000000006e-01 1.1000000000000000e-01 3.4000000000000002e-01
 V -1 0 0 0 0 0 1 2 0
 P 1 2212 0 0 6.9999999371178146e+03 7.0000000000000000e+03 9.3826999914648146e-01 3 0 0 -1 0
